--- a/calendar.html
+++ b/calendar.html
@@ -43,7 +43,8 @@
    			<h1>Meetings & Public Events</h1><br>   </center>
    	<!--Google Calender -->
    	<center>
-	<iframe src="https://calendar.google.com/calendar/embed?title=Astronomy%20and%20Physics%20Club%20Calendar&amp;showTitle=0&amp;height=500&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=pcc.astronomy.and.physics.club%40gmail.com&amp;color=%231B887A&amp;src=1vuo94jeu0mmhh20r46vte4o7o%40group.calendar.google.com&amp;color=%23B1365F&amp;src=ul9ufd47jmf92frnr92s895te4%40group.calendar.google.com&amp;color=%23AB8B00&amp;src=ht3jlfaac5lfd6263ulfh4tql8%40group.calendar.google.com&amp;color=%23333333&amp;src=ugpcsdc6n5oucf7jh96hk5hlc8%40group.calendar.google.com&amp;color=%2342104A&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe></center><br /><br />
+	<iframe src="https://calendar.google.com/calendar/embed?title=Astronomy%20and%20Physics%20Club%20Calendar&amp;showTitle=0&amp;height=500&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=pcc.astronomy.and.physics.club%40gmail.com&amp;color=%231B887A&amp;src=1vuo94jeu0mmhh20r46vte4o7o%40group.calendar.google.com&amp;color=%23B1365F&amp;src=ul9ufd47jmf92frnr92s895te4%40group.calendar.google.com&amp;color=%23AB8B00&amp;src=ht3jlfaac5lfd6263ulfh4tql8%40group.calendar.google.com&amp;color=%23333333&amp;src=ugpcsdc6n5oucf7jh96hk5hlc8%40group.calendar.google.com&amp;color=%2342104A&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe></center>
+			<br /><br />
 		</div>
 	</div>
 
