--- a/signup.html
+++ b/signup.html
@@ -65,7 +65,7 @@
 				<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 			</div>
 			<div class="mc-field-group">
-				<label for="mce-FNAME">First Name </label>
+				<label for="mce-FNAME">First Name <span class="asterisk">*</span></label>
 				<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
 			</div>
 			<div class="mc-field-group">
