--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
 			<h3>Officers</h3>
    			<p>	President - Steven<br />
 				Vice President - Liberty<br />
-				Treasurer - Kenneth<br />
-				ICC - Cristian<br />
+				Treasurer - Kenneth (or Ken)<br />
+				ICC - Pablo<br />
 				Secretary - Aung<br />
 				Event Coordinator - Paul<br />
 				Project Coordinator - John<br />
