--- a/index.html
+++ b/index.html
@@ -142,8 +142,12 @@
 			
    			<h3>Volunteer Opportunities</h3>
    			<p>
-				<a href="http://scienceformarch.sites.caltech.edu/schedule">Caltech Science for March Booth</a>-March 16, 2019 9am-1:40pm <br />
+				Caltech Astronomy on Tap at Der Wolfskopf - 3/25<br />
+				Caltech Star Gazing Lecture - 4/12 <br />
+				Caltech Astronomy on Tap at Der Wolfskopf - 4/22<br />
+				Caltech Star Gazing Lecture - 5/10 <br />
 				<br />
+				<del><a href="http://scienceformarch.sites.caltech.edu/schedule">Caltech Science for March Booth</a>-March 16, 2019 9am-1:40pm <br /></del>
 				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2<br /></del>
 				<del>Caltech Astronomy on Tap at Der Wolfskopf-Nov. 5<br /></del>
 				<del>Caltech Star Gazing Lecture-Telescope Volunteer-Nov. 16</del><br />
@@ -177,7 +181,9 @@
 			
 			<h3>Events</h3>
    			<p>
-				JPL Open House on May 18, 19 - <a href="https://www.jpl.nasa.gov/events/special-events.php">Sign Up by April 7</a>!<br />
+				JPL Open House on May 18, 19 - <a href="https://www.jpl.nasa.gov/events/special-events.php">Sign Up by April 6 for Tickets!</a>!<br />
+				<br />
+				Caltech Kavili Nanoscience Institute Lab Tour - April 12<br />
 				<del><a href="http://scienceformarch.sites.caltech.edu/schedule">Caltech Science for March Booth</a>-March 16, 2019 9am-1:40pm </del><br /><br />
 				<del>Caltech Cosmology Lab Tour with Abigail Crities-Oct. 26, 2018</del><br />
 				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2, 2018</del><br />
