--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
    				enrich the lives of Pasadena City College's students, our local community and our selves by providing these resources and experiences.</p>
    				
 				Affiliates: <br>
-				<right><a href="https://nightsky.jpl.nasa.gov/"><img src="NSNroundlogo.jpeg" alt="Night Sky Network" style="width:80px;height:80px;"></a>    <a href="https://www.astrosociety.org/"><img src="ASPlogo.png" alt="Astronomy Society of the Pacific" style="width:80px;height:80px;"></a><a href="https://pasadena.edu/academics/support/mesa/index.php"><img src="__mesalogo.jpg" alt="MESA"><br>
+				<right><a href="https://nightsky.jpl.nasa.gov/"><img src="NSNroundlogo.jpeg" alt="Night Sky Network" style="width:80px;height:80px;"></a>    <a href="https://www.astrosociety.org/"><img src="ASPlogo.png" alt="Astronomy Society of the Pacific" style="width:80px;height:80px;"></a><a href="https://pasadena.edu/academics/support/mesa/index.php"><img src="_mesalogo.jpg" alt="MESA"><br>
 				</right><br>
 			</div>   			
 
