--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
 			<b>Cosmology from the bottom of the Earth: Telescopes at the South Pole</b>- by Dr. Howard Hui - April 9<br /><br />
 			<b>Life in Graduate School</b> - by David Huynh- April 23 (Tentative)<br /><br />
 			<b>Giant Magellan Telescope </b>- by Dr. Rafael Millan-Gabet - April 30<br /><br />
-			<b>Matrix Product States for Quantum Many-Body Systems</b>-by Erika Ye - May 15 (Tentative)<br /><br />
+			<b>JPL Venus Rover</b>- Jonathan Sauder - May 7<br />
+			<b>Matrix Product States for Quantum Many-Body Systems</b>-by Erika Ye - May 15 (Tentative)<br />
+			<b>Carnegie Observatories</b> - Jeff Rich - May 21<br /><br />
 			(See Calender for Most Updated Schedule)<br />
 		        <a href="https://docs.google.com/document/d/1480yh70A_809tIaoM-_pH33inRtVO16Oj_v3IxymsZs/edit#">More about the speakers.</a>
 			<br />
@@ -148,8 +150,8 @@
 				Caltech Star Gazing Lecture - 5/10 <br />
 				<br />
 				<del><a href="http://scienceformarch.sites.caltech.edu/schedule">Caltech Science for March Booth</a>-March 16, 2019 9am-1:40pm <br /></del>
-				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2<br /></del>
-				<del>Caltech Astronomy on Tap at Der Wolfskopf-Nov. 5<br /></del>
+				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2</del><br />
+				<del>Caltech Astronomy on Tap at Der Wolfskopf-Nov. 5</del><br />
 				<del>Caltech Star Gazing Lecture-Telescope Volunteer-Nov. 16</del><br />
 				<del>Astronomy on Tap-General Volunteer-Dec. 3 (Abigail is giving a talk)</del><br />
 				<del>Caltech Star Gazing Lecture-Telescope Volunteer-Dec. 14</del><br />
@@ -181,10 +183,10 @@
 			
 			<h3>Events</h3>
    			<p>
-				JPL Open House on May 18, 19 - <a href="https://www.jpl.nasa.gov/events/special-events.php">Sign Up by April 6 for Tickets!</a>!<br />
+				A Ticket to JPL- May 18, 19 - <a href="https://www.jpl.nasa.gov/events/special-events.php">MUST Register on April 6 12Midnight for Tickets!</a>!<br />
 				<br />
 				Caltech Kavili Nanoscience Institute Lab Tour - April 12<br />
-				<del><a href="http://scienceformarch.sites.caltech.edu/schedule">Caltech Science for March Booth</a>-March 16, 2019 9am-1:40pm </del><br /><br />
+				<del><a href="http://scienceformarch.sites.caltech.edu/schedule">Caltech Science for March Booth</a>-March 16, 2019 9am-1:40pm </del><br />
 				<del>Caltech Cosmology Lab Tour with Abigail Crities-Oct. 26, 2018</del><br />
 				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2, 2018</del><br />
    				<br />
