--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 			<h3>Events</h3>
    			<p>
 				A Ticket to JPL- May 18, 19 - <a href="https://www.jpl.nasa.gov/events/special-events.php">MUST Register on April 6 12Midnight for Tickets!</a>!<br />
-				Caltech Kavili Nanoscience Institute Lab Tour - April 12<br />
+				Caltech Kavili Nanoscience Institute Lab Tour - April 12 (Tentative)<br />
 				<br />
 				<del><a href="http://scienceformarch.sites.caltech.edu/schedule">Caltech Science for March Booth</a>-March 16, 2019 9am-1:40pm </del><br />
 				<del>Caltech Cosmology Lab Tour with Abigail Crities-Oct. 26, 2018</del><br />
