--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
 			<b>Cosmology from the bottom of the Earth: Telescopes at the South Pole</b>- by Dr. Howard Hui - April 9<br /><br />
 			<b>Life in Graduate School</b> - by David Huynh- April 23 (Tentative)<br /><br />
 			<b>Giant Magellan Telescope </b>- by Dr. Rafael Millan-Gabet - April 30<br /><br />
-			<b>JPL Venus Rover</b>- Jonathan Sauder - May 7<br />
-			<b>Matrix Product States for Quantum Many-Body Systems</b>-by Erika Ye - May 15 (Tentative)<br />
+			<b>JPL Venus Rover</b>- Jonathan Sauder - May 7<br /><br />
+			<b>Matrix Product States for Quantum Many-Body Systems</b>-by Erika Ye - May 15 (Tentative)<br /><br />
 			<b>Carnegie Observatories</b> - Jeff Rich - May 21<br /><br />
-			(See Calender for Most Updated Schedule)<br />
+			(See Calender for Most Updated Schedule)<br /><br />
 		        <a href="https://docs.google.com/document/d/1480yh70A_809tIaoM-_pH33inRtVO16Oj_v3IxymsZs/edit#">More about the speakers.</a>
 			<br />
 			</p>
