--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 			
 			<h3>Events</h3>
    			<p>
-				A Ticket to JPL- May 18, 19 - <a href="https://www.jpl.nasa.gov/events/special-events.php">MUST Register on April 6 12Midnight for Tickets!</a>!<br />
+				A Ticket to JPL- May 18, 19 - <a href="https://www.jpl.nasa.gov/events/special-events.php">MUST Register on April 6 - 8am for Tickets!</a>!<br />
 				<a href="https://docs.google.com/forms/d/e/1FAIpQLSfE3jEkUwpSBTtAVBxHUoZdPI711uI0rk826WqYRfd2GTfVkg/viewform?usp=sf_link">Caltech Kavli Nanoscience Institute Lab Tour - April 19 at 2pm - Sign Up Now!</a><br />
 				<br />
 				<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfE3jEkUwpSBTtAVBxHUoZdPI711uI0rk826WqYRfd2GTfVkg/viewform?embedded=true" width="640" height="1645" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
