--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 			
 			<h3>Talks</h3>
 			<p>
-			<b>When we cannot find a particle in the universe, so we go to solids.</b>- by Junyi Shan - March 19<br /><br />
-			<b>From PCC to JPL with my Condense Matter Physics</b>- by Simon Huy T Vuong - March 26<br /><br />
-			<b>The Dynamic Sky of Low-Frequency Radio Astronomy</b>- by Dr. Jake Hartman - April 2<br /><br />
+			<del><b>When we cannot find a particle in the universe, so we go to solids.</b>- by Junyi Shan - March 19</del><br /><br />
+			<del><b>From PCC to JPL with my Condense Matter Physics</b>- by Simon Huy T Vuong - March 26</del><br /><br />
+			<del><b>The Dynamic Sky of Low-Frequency Radio Astronomy</b>- by Dr. Jake Hartman - April 2</del><br /><br />
 			<b>Cosmology from the bottom of the Earth: Telescopes at the South Pole</b>- by Dr. Howard Hui - April 9<br /><br />
 			<b>Life in Graduate School</b> - by David Huynh- April 23 (Tentative)<br /><br />
 			<b>Giant Magellan Telescope </b>- by Dr. Rafael Millan-Gabet - April 30<br /><br />
@@ -144,17 +144,16 @@
 			
    			<h3>Volunteer Opportunities</h3>
    			<p>
-				Caltech Astronomy on Tap at Der Wolfskopf - 3/25<br />
+				
 				Caltech Star Gazing Lecture - 4/12 <br />
 				Caltech Astronomy on Tap at Der Wolfskopf - 4/22<br />
 				Caltech Star Gazing Lecture - 5/10 <br />
+				Volunteering at the JPL Open House-May 18/19-Full on Volunteers<br>
 				<br />
+				
+				<del>Caltech Astronomy on Tap at Der Wolfskopf - 3/25<br /></del>
 				<del><a href="http://scienceformarch.sites.caltech.edu/schedule">Caltech Science for March Booth</a>-March 16, 2019 9am-1:40pm <br /></del>
 				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2</del><br />
-				<del>Caltech Astronomy on Tap at Der Wolfskopf-Nov. 5</del><br />
-				<del>Caltech Star Gazing Lecture-Telescope Volunteer-Nov. 16</del><br />
-				<del>Astronomy on Tap-General Volunteer-Dec. 3 (Abigail is giving a talk)</del><br />
-				<del>Caltech Star Gazing Lecture-Telescope Volunteer-Dec. 14</del><br />
    			</p>
 
    			<ul class="info-list">
@@ -183,8 +182,8 @@
 			
 			<h3>Events</h3>
    			<p>
-				A Ticket to JPL- May 18, 19 - <a href="https://www.jpl.nasa.gov/events/special-events.php">MUST Register on April 6 - 8am for Tickets!</a>!<br />
 				Caltech Kavli Nanoscience Institute Lab Tour - April 19 at 2pm - Sign Up Now!<br />
+				A Ticket to Explore JPL- May 18, 19<br />
 				<br />
 				<del><a href="http://scienceformarch.sites.caltech.edu/schedule">Caltech Science for March Booth</a>-March 16, 2019 9am-1:40pm </del><br />
 				<del>Caltech Cosmology Lab Tour with Abigail Crities-Oct. 26, 2018</del><br />
@@ -198,7 +197,8 @@
 				<br>
 				<u>The Tesla Coil</u><br>
    				Current Progress:
-   				Tesla Coil Sparked<br></p>
+   				Tesla Coil Sparked
+				On Hold<br></p>
 
 				<ul class="skill-bars">
 				   <li>
