--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 				<br>
 				<u>The Tesla Coil</u><br>
    				Current Progress:
-   				Tesla Coil Sparked
+   				Tesla Coil Sparked - 
 				On Hold<br></p>
 
 				<ul class="skill-bars">
