--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 			<del><b>When we cannot find a particle in the universe, so we go to solids.</b>- by Junyi Shan - March 19</del><br /><br />
 			<del><b>From PCC to JPL with my Condense Matter Physics</b>- by Simon Huy T Vuong - March 26</del><br /><br />
 			<del><b>The Dynamic Sky of Low-Frequency Radio Astronomy</b>- by Dr. Jake Hartman - April 2</del><br /><br />
-			<del><b>Cosmology from the bottom of the Earth: Telescopes at the South Pole</b>- by Dr. Howard Hui - April 9<br /><br />
+			<del><b>Cosmology from the bottom of the Earth: Telescopes at the South Pole></b>- by Dr. Howard Hui - April 9<br /></del><br />
 			<b>Life in Graduate School</b> - by David Huynh- April 25 in Room: IT 214<br /><br />
 			<b>Giant Magellan Telescope </b>- by Dr. Rafael Millan-Gabet - April 30<br /><br />
 			<b>JPL Venus Rover</b>- Jonathan Sauder - May 7<br /><br />
