--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
    			<h3>Meetings</h3>
    			<p>Days: Every Tuesday<br />
    			   Time: 12-1pm<br />
-   			   Location: E 311 (Physics room next to library)<br />
+   			   Location: E 202 (Physics room next to library)<br />
 			   >>> <a href="https://docs.google.com/presentation/d/1wX0UbdIAoLFgWNMIeqBps7kwGxAh6GvBjIbuHKaAzlA/edit?usp=sharing">Informational First Meeting Slides</a> <<<
 			</p>
 			
@@ -211,8 +211,8 @@
 			
 			
 			<h3>Officers</h3>
-   			<p>	President - Steven<br />
-				Vice President - Liberty<br />
+   			<p>	President - Liberty<br />
+				Vice President - Steven<br />
 				Treasurer - Kenneth (or Ken)<br />
 				ICC - Pablo<br />
 				Secretary - Aung<br />
