--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="http://csthorn.com/physics" title="Join Now!" class="button button-primary">Join Now!</a>
+   			<a href="signup.html" title="Join Now!" class="button button-primary">Join Now!</a>
    			<a href="https://docs.google.com/document/d/1ZX5Pj8zBY_d_99axz9n5t8RVaze7_oHsskOE3dUL3KA/edit" title="View Tesla Coil Project Notes" class="button button-primary">Tesla Coil Updates</a>
 			<br>
 			<br>
