--- a/index.html
+++ b/index.html
@@ -209,18 +209,20 @@
 			
 			
 			<h3>Officers</h3>
-   			<p>	President - Liberty<br />
-				Vice President - Steven<br />
-				Treasurer - Kenneth (or Ken)<br />
-				ICC - Pablo<br />
-				Secretary - Aung<br />
-				Event Coordinator - Paul<br />
+   			<p>	President - Steven<br />
+				Vice President - Aung<br />
+				Treasurer - Wei<br />
+				ICC - Winnie<br />
+				Secretary - Loli<br />
+				Event Coordinator - Jenna<br />
 				Project Coordinator - John<br />
+				Speaker Coordinator - Liberty<br />
 				<br />
 				<a href="https://docs.google.com/forms/d/e/1FAIpQLScRTTnnjHxHrhhDNKfRV-EJRdFVutAN_rYW2bJ_1D2C4HeZ5g/viewform?usp=sf_link">Run for Office</a><br>
-				<br>
+				<br />
 				Advisor - <a href = "http://www.kbcheney.com/physics/teachers/cheney/">Professor Cheney</a><br>
-				Advisor - Professor Watkins<br>
+				Advisor - Professor Watkins<br />
+				Advisor - Professor Hartman<br />
    		</div>
 
    	</div>
