--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
    			<p>	President - Steven<br />
 				Vice President - Aung<br />
 				Treasurer - Wei<br />
-				ICC - Winnie<br />
-				Secretary - Loli<br />
+				ICC - Loli<br />
+				Secretary - Winnie<br />
 				Event Coordinator - Jenna<br />
 				Project Coordinator - John<br />
 				Speaker Coordinator - Liberty<br />
