--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
 			<h3>Officers</h3>
    			<p>	President - Steven<br />
 				Vice President - Aung<br />
-				Treasurer - Wei<br />
-				ICC - Loli<br />
+				Treasurer - Wei Wei<br />
+				ICC - Loly<br />
 				Secretary - Winnie<br />
-				Event Coordinator - Jenna<br />
+				Volunteer Coordinator - Jenna<br />
 				Project Coordinator - John<br />
 				Speaker Coordinator - Liberty<br />
 				<br />
