--- a/schedule.html
+++ b/schedule.html
@@ -39,11 +39,20 @@
    	<br>
    	<div class="row section-intro">
    		<div class="col-twelve"><center>
-   	<h5>Astronomy and Physics Club Calendar</h5>
-   			<h1>Meetings & Public Events</h1><br>   </center>
-   	<!--Google Calender -->
-   	<center>
-	<iframe src="https://calendar.google.com/calendar/embed?title=Astronomy%20and%20Physics%20Club%20Calendar&amp;showTitle=0&amp;height=500&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=pcc.astronomy.and.physics.club%40gmail.com&amp;color=%231B887A&amp;src=1vuo94jeu0mmhh20r46vte4o7o%40group.calendar.google.com&amp;color=%23B1365F&amp;src=ul9ufd47jmf92frnr92s895te4%40group.calendar.google.com&amp;color=%23AB8B00&amp;src=ht3jlfaac5lfd6263ulfh4tql8%40group.calendar.google.com&amp;color=%23333333&amp;src=ugpcsdc6n5oucf7jh96hk5hlc8%40group.calendar.google.com&amp;color=%2342104A&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe></center><br /><br />
+   	<h5>Astronomy and Physics Club Past Talks</h5>
+   			<h1>Past Talks</h1><br>   </center>
+   	<center> <del><b>When we cannot find a particle in the universe, so we go to solids.</b>- by Junyi Shan - March 19</del><br /><br />
+			<del><b>From PCC to JPL with my Condense Matter Physics</b>- by Simon Huy T Vuong - March 26</del><br /><br />
+			<del><b>The Dynamic Sky of Low-Frequency Radio Astronomy</b>- by Dr. Jake Hartman - April 2</del><br /><br />
+			<del><b>Cosmology from the bottom of the Earth: Telescopes at the South Pole></b>- by Dr. Howard Hui - April 9</del><br /></del><br />
+			<del><b>Life in Graduate School</b> - by David Huynh- April 25 in Room: IT 214</del><br /><br />
+			<del><b>Giant Magellan Telescope </b>- by Dr. Rafael Millan-Gabet - April 30</del><br /><br />
+			<del><b>JPL Venus Rover</b>- Jonathan Sauder - May 7</del><br /><br />
+			<del><b>Matrix Product States for Quantum Many-Body Systems</b>-by Erika Ye - May 15 (Tentative)<br /></del><br />
+			<del><b>Carnegie Observatories</b> - Jeff Rich - May 21<br /></del><br /> 
+			<br />
+			Thank you to all the speakers for sharing your science with us at Pasadena City College.
+			</center><br /><br />
 		</div>
 	</div>
 
