--- a/schedule.html
+++ b/schedule.html
@@ -41,15 +41,15 @@
    		<div class="col-twelve"><center>
    	<h5>Astronomy and Physics Club Past Talks</h5>
    			<h1>Past Talks</h1><br>   </center>
-   	<center> <del><b>When we cannot find a particle in the universe, so we go to solids.</b>- by Junyi Shan - March 19</del><br /><br />
-			<del><b>From PCC to JPL with my Condense Matter Physics</b>- by Simon Huy T Vuong - March 26</del><br /><br />
-			<del><b>The Dynamic Sky of Low-Frequency Radio Astronomy</b>- by Dr. Jake Hartman - April 2</del><br /><br />
-			<del><b>Cosmology from the bottom of the Earth: Telescopes at the South Pole></b>- by Dr. Howard Hui - April 9</del><br /></del><br />
-			<del><b>Life in Graduate School</b> - by David Huynh- April 25 in Room: IT 214</del><br /><br />
-			<del><b>Giant Magellan Telescope </b>- by Dr. Rafael Millan-Gabet - April 30</del><br /><br />
-			<del><b>JPL Venus Rover</b>- Jonathan Sauder - May 7</del><br /><br />
-			<del><b>Matrix Product States for Quantum Many-Body Systems</b>-by Erika Ye - May 15 (Tentative)<br /></del><br />
-			<del><b>Carnegie Observatories</b> - Jeff Rich - May 21<br /></del><br /> 
+   	<center> <del><b>When we cannot find a particle in the universe, so we go to solids.</b>- by Junyi Shan - March 19<<br /><br />
+		<b>From PCC to JPL with my Condense Matter Physics</b>- by Simon Huy T Vuong - March 26<br /><br />
+		<b>The Dynamic Sky of Low-Frequency Radio Astronomy</b>- by Dr. Jake Hartman - April 2<br /><br />
+		<b>Cosmology from the bottom of the Earth: Telescopes at the South Pole></b>- by Dr. Howard Hui - April 9<br /></del><br />
+		<b>Life in Graduate School</b> - by David Huynh- April 25 in Room: IT 214<br /><br />
+		<b>Giant Magellan Telescope </b>- by Dr. Rafael Millan-Gabet - April 30<br /><br />
+		<b>JPL Venus Rover</b>- Jonathan Sauder - May 7br /><br />
+		<b>Matrix Product States for Quantum Many-Body Systems</b>-by Erika Ye - May 15 (Tentative)<br /><br />
+		<b>Carnegie Observatories</b> - Jeff Rich - May 21<br /><br /> 
 			<br />
 			Thank you to all the speakers for sharing your science with us at Pasadena City College.
 			</center><br /><br />
