--- a/index.html
+++ b/index.html
@@ -128,18 +128,17 @@
 			
 			<h3>Talks</h3>
 			<p>
-			<del><b>When we cannot find a particle in the universe, so we go to solids.</b>- by Junyi Shan - March 19</del><br /><br />
-			<del><b>From PCC to JPL with my Condense Matter Physics</b>- by Simon Huy T Vuong - March 26</del><br /><br />
-			<del><b>The Dynamic Sky of Low-Frequency Radio Astronomy</b>- by Dr. Jake Hartman - April 2</del><br /><br />
-			<del><b>Cosmology from the bottom of the Earth: Telescopes at the South Pole></b>- by Dr. Howard Hui - April 9</del><br /></del><br />
-			<del><b>Life in Graduate School</b> - by David Huynh- April 25 in Room: IT 214</del><br /><br />
-			<del><b>Giant Magellan Telescope </b>- by Dr. Rafael Millan-Gabet - April 30</del><br /><br />
-			<del><b>JPL Venus Rover</b>- Jonathan Sauder - May 7</del><br /><br />
-			<del><b>Matrix Product States for Quantum Many-Body Systems</b>-by Erika Ye - May 15 (Tentative)<br /></del><br />
-			<del><b>Carnegie Observatories</b> - Jeff Rich - May 21<br /></del><br />
+			10
 			(See Calender for Most Updated Schedule)<br /><br />
 		        <a href="https://docs.google.com/document/d/1480yh70A_809tIaoM-_pH33inRtVO16Oj_v3IxymsZs/edit#">More about the speakers.</a>
 			<br />
+			Oct 15, Douglas Isbell, JPL - “Mars 2020: Seeking Signs of Ancient Life on the Red Planet”<br />
+			Oct 22, Rafael Millan-Gabet, GMTO - “Frontier Science with the Giant Magellan Telescope”<br />
+			Oct 29, Junyi Shan, Caltech Graduate student - “Symmetry and property of solids with nonlinear optical probe”<br />
+			Nov 12, John Brophy - JPL Principle Engineer - TBA<br />
+		        Nov 26, TBA<br />
+				
+				<a href="/schedule.html">Past Speakers</a>
 			</p>
 			
 
