--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@
 			
 			<h3>Volunteer Opportunities</h3>
    			<p>
-				Carnegie at PCC: Glimpse of Cosmic Dawn - 9/18<br />
-				Caltech Star Gazing Lectures - 10/4 <br />
-				Carnegie at PCC: A New Tool to Map Galaxies- 10/16<br />
-				Carnegie at PCC: The DNA of Galaxies - 11/20<br />
+				<del>Carnegie at PCC: Glimpse of Cosmic Dawn - 9/18</del><br />
+				<del>Caltech Star Gazing Lectures - 10/4 </del><br />
+				<del>Carnegie at PCC: A New Tool to Map Galaxies- 10/16</del><br />
 				Caltech Star Gazing Lectures - 11/1 <br />
-				
+				Carnegie at PCC: The DNA of Galaxies - 11/20<br />
+				<br />
 				<del>Caltech Astronomy on Tap at Der Wolfskopf - 4/22<br /></del>
 				<del>Caltech Star Gazing Lecture - 5/10 <br /></del>
 				Volunteering at the JPL Open House-May 18/19-Full on Volunteers<br>
