Added Resources Doc

--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
    			   Time: 12-1pm<br />
    			   Location: E 311 (Physics room next to library)<br />
 			   >>> <a href="https://docs.google.com/presentation/d/1wX0UbdIAoLFgWNMIeqBps7kwGxAh6GvBjIbuHKaAzlA/edit?usp=sharing">Informational First Meeting Slides</a> <<<
+			   >>> <a href="https://docs.google.com/spreadsheets/d/1zcowcwb_YOVpPNSg4wOwdLoYWMVdyxT7923S7sv5Fkw/edit?usp=sharing">Useful Programs/Resources with Deadlines!</a> <<<
 			</p>
 			
 			
