--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">The Astronomy and Physics Club at Pasadena City College is dedicated to promoting interests in Physics, Astronomy, Planetary Science, Space Exploration and all related STEM fields. We strive to create an environment that is open to anyone who has an interest in science, regardless of their major. Our goal is to have fun and enjoy learning while working together as a team. There are many opportunities to gain volunteering experience, attend exciting events, and work on projects that allow individuals to experience what it is like to be a scientist or engineer. Our mission is to
-   				enrich the lives of Pasadena City College's students, our local community and our selves by providing these resources and experiences.</p>
+   				<p class="lead">The Astronomy and Physics Club at Pasadena City College is dedicated to promoting interests in Physics, Astronomy, Planetary Science, Space Exploration and all related STEM fields. We strive to create an environment that is open to anyone who has an interest in science, regardless of major. Our goal is to have fun and enjoy learning while working together as a team. There are many opportunities to gain through volunteering experiences, attending exciting events, and working on projects that allow individuals to experience what it is like to be a scientist or engineer. Our mission is to
+   				enrich the lives of PCC students, members of the local community and our selves by providing these resources and experiences.</p>
    				
 				Affiliates: <br>
 				<right><a href="https://nightsky.jpl.nasa.gov/"><img src="NSNroundlogo.jpeg" alt="Night Sky Network" style="width:80px;height:80px;"></a>    <a href="https://www.astrosociety.org/"><img src="ASPlogo.png" alt="Astronomy Society of the Pacific" style="width:80px;height:80px;"></a><a href="https://pasadena.edu/academics/support/mesa/index.php">MESA</a><br>
