--- a/index.html
+++ b/index.html
@@ -218,19 +218,20 @@
 			
 			
 			<h3>Officers</h3>
-   			<p>	President - Steven<br />
-				Vice President - Aung<br />
-				Treasurer - Wei Wei<br />
-				ICC - Loly<br />
-				Secretary - Winnie<br />
-				Volunteer Coordinator - Jenna<br />
-				Speaker Coordinator - Liberty<br />
-				<br />
+   			<p>	President - Aung Zin<br/>
+                Co-President - Liberty Locsin<br/>
+                Vice President - Winnie Jeng<br/>
+                Secretary - Loly Liu<br/>
+				Treasurer - Wei Wei Hung<br />
+				ICC - Winnie Jeng<br />
+				Volunteer Coordinator - Jenna Pitman<br />
+				Event Coordinator - Liberty Locsin<br />
+				<br/>
 				<a href="https://docs.google.com/forms/d/e/1FAIpQLScRTTnnjHxHrhhDNKfRV-EJRdFVutAN_rYW2bJ_1D2C4HeZ5g/viewform?usp=sf_link">Run for Office</a><br>
-				<br />
-				Advisor - <a href = "http://www.kbcheney.com/physics/teachers/cheney/">Professor Cheney</a><br>
-				Advisor - Professor Watkins<br />
-				Advisor - Professor Hartman<br />
+				<br/>
+				Advisor - <a href = "http://www.kbcheney.com/physics/teachers/cheney/">Professor Kenneth Cheney</a><br>
+                Advisor - Professor Jake Hartman<br />
+                Advisor - Professor John Watkins<br />
    		</div>
 
    	</div>
